Bug 198359 - [iOS] Third-party extensions using WKWebView are unable to render anything
Summary: [iOS] Third-party extensions using WKWebView are unable to render anything
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2019-05-29 19:19 PDT by Chris Dumez
Modified: 2019-05-30 11:39 PDT (History)
7 users (show)

See Also:


Attachments
Patch (5.64 KB, patch)
2019-05-29 19:26 PDT, Chris Dumez
no flags Details | Formatted Diff | Diff
Patch (5.66 KB, patch)
2019-05-30 10:46 PDT, Chris Dumez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2019-05-29 19:19:00 PDT
Third-party extensions using WKWebView are unable to render anything because we do not get notified when the extension's visibility changes. Because we do not recognize the extension showing the WebView to be foreground, we do not take a process assertion on behalf of the child processes and they get suspended before they get a chance to render anything.
Comment 1 Chris Dumez 2019-05-29 19:19:16 PDT
<rdar://problem/51105015>
Comment 2 Chris Dumez 2019-05-29 19:26:08 PDT
Created attachment 370908 [details]
Patch
Comment 3 Brent Fulgham 2019-05-30 10:41:27 PDT
Comment on attachment 370908 [details]
Patch

r=me
Comment 4 Geoffrey Garen 2019-05-30 10:44:42 PDT
r=me
Comment 5 Chris Dumez 2019-05-30 10:46:32 PDT
Created attachment 370954 [details]
Patch
Comment 6 WebKit Commit Bot 2019-05-30 11:38:37 PDT
The commit-queue encountered the following flaky tests while processing attachment 370954 [details]:

fetch/fetch-worker-crash.html bug 187257 (author: youennf@gmail.com)
The commit-queue is continuing to process your patch.
Comment 7 WebKit Commit Bot 2019-05-30 11:39:25 PDT
Comment on attachment 370954 [details]
Patch

Clearing flags on attachment: 370954

Committed r245896: <https://trac.webkit.org/changeset/245896>
Comment 8 WebKit Commit Bot 2019-05-30 11:39:26 PDT
All reviewed patches have been landed.  Closing bug.